[package]
name = "clip2clip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard-master = "3.1.3"
arboard = { git = "https://github.com/yaoliao/arboard.git", features = ["image-data", "wayland-data-control"], default-features = false }
libp2p = "0.42.2"
anyhow = "1.0.54"
tokio = { version = "1.17.0", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3.1"
log = "0.4.6"
env_logger = "0.6.1"
chrono = "0.4.19"
serde = { version = "1", features = ["derive"] }
bincode = "1.3.2"


[dev-dependencies]
async-std = { version = "1.6.2", features = ["attributes"] }
async-trait = "0.1"
env_logger = "0.9.0"
structopt = "0.3.21"
tokio = { version = "1.15", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread"] }